--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     }
                 }
             }
-            else if (id.value == "mthilesh09@gmail.com" && pass.value == "123") {
+            else if (id.value == "mthilesh09@gmail.com" && password.value == "123") {
                 alert("login successfull")
                 location.href = 'home.html'
             }
